--- a/web_scrapping.ipynb
+++ b/web_scrapping.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Store the root url of the endclothing.com."
+    "## Web-scrapping on endclothing.com"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 1. Store the root url of the endclothing.com."
    ]
   },
   {
@@ -21,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First of all, try to web scrap the department and color category from the end clothing website to prepare scrapping each webpage according to these two tags."
+    "### Step 2. Get the department and color category from the site"
    ]
   },
   {
@@ -71,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Build a class object to perform better storage organization of the scrapped elements"
+    "### Step 3. Build a class object to organize better"
    ]
   },
   {
@@ -118,7 +125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Build an dictionary to store the webpage which failed to scrap"
+    "### Step 4. Build an dictionary to store the webpage which failed to scrap"
    ]
   },
   {
@@ -136,7 +143,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Implement an function to scrap a single web page"
+    "### Step 5. Implement an function to scrap a single web page"
    ]
   },
   {
@@ -229,7 +236,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Build a multithreading approach for scrapping each department and color. The store it into data variable for further analysis."
+    "### Step 6. Build a multithreading approach for scrapping each department and color"
    ]
   },
   {
@@ -265,7 +272,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check the data after finishing all web scrapping and store those failed pages in srcapping in \"failed_page_list.csv\"."
+    "### Step 7. Check the data after finishing all web scrapping and store those failed pages in scrapping in \"failed_page_list.csv\"."
    ]
   },
   {
@@ -291,7 +298,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Extract those departments and colors from failed page list and do the scrapping again."
+    "### Step 8. Extract those departments and colors from failed page list and do the scrapping again."
    ]
   },
   {
@@ -337,7 +344,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Store the scrapped information into product_card.csv for further analysis"
+    "### Step 9. Store the scrapped information into product_card.csv for further analysis"
    ]
   },
   {
@@ -356,6 +363,13 @@
     "    writer.writerow(title) # Use writerow for single list\n",
     "    for product_card in data:\n",
     "        writer.writerow([product_card.get_name(), product_card.get_color(), product_card.get_color_cat(), product_card.get_price(), product_card.get_dept()])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The below shows the structure of the product_card.csv"
    ]
   },
   {
@@ -385,7 +399,6 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "# end_clothing_product_df = pd.read_csv(\"product_card.csv\")\n",
     "end_clothing_product_df = pd.read_csv(\"product_card.csv\")\n",
     "\n",
     "print(end_clothing_product_df.info())"
