removed thread counter

--- a/web_scrapping.ipynb
+++ b/web_scrapping.ipynb
@@ -257,15 +257,13 @@
     "        for color in colors_list:\n",
     "            print(f\"dept:{dept}, color:{color}\")\n",
     "            future_to_url.append(executor.submit(single_web_scrap, urllib.parse.quote_plus(color), urllib.parse.quote(dept)))\n",
-    "    \n",
+    "\n",
     "    data = []\n",
     "    for future in concurrent.futures.as_completed(future_to_url):\n",
     "        try:\n",
     "            data.extend(future.result())\n",
     "        except Exception as exc:\n",
-    "            print(exc)\n",
-    "    counter += 1\n",
-    "    print(F\"Thread completed: {counter}\")"
+    "            print(exc)\n"
    ]
   },
   {
