--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -64,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The total number of men item from endclothing.com at the time to do scrapping"
+    "The total number of men items from endclothing.com at the time to do scrapping"
    ]
   },
   {
@@ -204,7 +204,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following treemap shows the percentage of color of cloths on the endclothing website. The most number of cloth of color is Black (9269), followed by Blue (5629), Green (3887), and white (3579). "
+    "The following treemap shows the ratio of colour of cloths on the endclothing website. The most number of cloth of color is Black (9269), followed by Blue (5629), Green (3887), and white (3579). "
    ]
   },
   {
